<resources>
    <string name="app_name">Calculator</string>
    <string name="clear">C</string>
    <string name="delete">⌫</string>
    <string name="percent">%</string>
    <string name="divide">÷</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">×</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="radical">√</string>
    <string name="zero">0</string>
    <string name="decimal">.</string>
    <string name="equals">=</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="title_activity_function">FunctionActivity</string>
    <string name="title_activity_tran">TranActivity</string>
    <string name="km">km</string>
    <string name="m">m</string>
    <string name="cm">cm</string>
    <string name="mm">mm</string>
    <string name="m2">立方米</string>
    <string name="dm2">立方分米</string>
    <string name="cm2">立方厘米</string>
</resources>
