<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/grid_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:layout_gravity="bottom"
    android:columnCount="4"
    android:rowCount="7">

    <Button
        android:id="@+id/tran_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:background="@android:color/transparent"
        android:text="⇌"
        android:textAllCaps="false"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/formula_text"
        android:layout_columnSpan="3"
        android:layout_gravity="bottom|end"
        android:layout_margin="10dp"
        android:textSize="34sp"
        android:textColor="#000000"
        android:hint="" />

    <Button
        android:id="@+id/fx_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:background="@android:color/transparent"
        android:text="fx"
        android:textAllCaps="false"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/answer_text"
        android:layout_columnSpan="3"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:hint="@string/zero" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_columnWeight="1"
        android:background="@android:color/transparent"
        android:text="@string/clear"
        android:textAllCaps="false"
        android:textSize="30sp" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_columnWeight="1"
        android:background="@android:color/transparent"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textSize="30sp" />

    <Button
        android:id="@+id/percent_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_columnWeight="1"
        android:background="@android:color/transparent"
        android:text="@string/percent"
        android:textAllCaps="false"
        android:textSize="30sp" />

    <Button
        android:id="@+id/divide_button"
        android:layout_gravity="bottom"
        android:text="@string/divide"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:background="@android:color/transparent"
        android:layout_columnWeight="1"/>

    <Button
        android:id="@+id/seven_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_columnWeight="1"
        android:background="@android:color/transparent"
        android:text="@string/seven"
        android:textAllCaps="false"
        android:textSize="30sp" />

    <Button
        android:id="@+id/eight_button"
        android:text="@string/eight"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:background="@android:color/transparent"
        android:layout_columnWeight="1"/>

    <Button
        android:id="@+id/nine_button"
        android:text="@string/nine"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:background="@android:color/transparent"
        android:layout_columnWeight="1"/>

    <Button
        android:id="@+id/multiply_button"
        android:text="@string/multiply"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:background="@android:color/transparent"
        android:layout_columnWeight="1"/>

    <Button
        android:id="@+id/four_button"
        android:text="@string/four"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:background="@android:color/transparent"
        android:layout_columnWeight="1"/>

    <Button
        android:id="@+id/five_button"
        android:text="@string/five"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:background="@android:color/transparent"
        android:layout_columnWeight="1"/>

    <Button
        android:id="@+id/six_button"
        android:text="@string/six"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:background="@android:color/transparent"
        android:layout_columnWeight="1"/>

    <Button
        android:id="@+id/minus_button"
        android:text="@string/minus"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:background="@android:color/transparent"
        android:layout_columnWeight="1"/>

    <Button
        android:id="@+id/one_button"
        android:text="@string/one"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:background="@android:color/transparent"
        android:layout_columnWeight="1"/>

    <Button
        android:id="@+id/two_button"
        android:text="@string/two"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:background="@android:color/transparent"
        android:layout_columnWeight="1"/>

    <Button
        android:id="@+id/three_button"
        android:text="@string/three"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:background="@android:color/transparent"
        android:layout_columnWeight="1"/>

    <Button
        android:id="@+id/plus_button"
        android:text="@string/plus"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:background="@android:color/transparent"
        android:layout_columnWeight="1"/>

    <Button
        android:id="@+id/radical_button"
        android:text="@string/radical"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:background="@android:color/transparent"
        android:layout_columnWeight="1"/>

    <Button
        android:id="@+id/zero_button"
        android:text="@string/zero"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:background="@android:color/transparent"
        android:layout_columnWeight="1"/>

    <Button
        android:id="@+id/decimal_button"
        android:text="@string/decimal"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:background="@android:color/transparent"
        android:layout_columnWeight="1"/>

    <Button
        android:id="@+id/equals_button"
        android:text="@string/equals"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:background="@android:color/transparent"
        android:layout_columnWeight="1"/>

</GridLayout>

